--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
    padding-top: 800px;
     margin: 0;
+    text-align: center;
    
 }
 .profile{
@@ -37,10 +38,32 @@ h1 {
     font-family: 'Lato', sans-serif;
     font-weight: 300;
 }
+.insp{
+    width:200px;
+    height:200px;
+    border-style: solid;
+    border-width: 10px;
+    border-color: grey;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+html{
+    scroll-behavior: smooth;
+}
+#inspiration img{
+transition: transform .2s;
+}
+
+#inspiration img:hover {
+    transform: scale(0.9);
+}
 #place {
-    font-size: 30px;
+    font-size: 60px;
     line-height: 1.2;
-    font-family: cursive
+   font-family: 'MonteCarlo', cursive;
+}
+#inspiration{
+    background-color: cadetblue;
 }
 #about {
 
@@ -86,5 +109,8 @@ p {
 }
 .links:hover{
     background-color:dodgerblue;
+}
+#song{
+    text-align: center;
 }
 
